# high-bandwidth-proxies-youtube-downloader

./: .gitignore  README.md
.github/workflows/: dev_executor_deploy.yaml  dev_gateway_deploy.yaml
gateway/: Dockerfile  README.md  pyproject.toml  requirements.txt
gateway/src/: __init__.py  config.py  main.py  models.py  runner.py  store.py
scripts/: create_secrets.sh
worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
worker/src/: config.py  downloader.py  main.py  proxy_manager.py  restrictions.py  test_request.py  youtube_client.py
worker/src/providers/: __init__.py  base.py  dataimpulse.py  smartproxy.py  webshare.py
worker/src/storage/: __init__.py  bucket.py  callback.py  events.py  firestore.py  gcs.py  pubsub.py
